[package]
name = "ccc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = "0.5.0"
crc32fast = { version = "1.3.2", default-features = false }
cobs = { git = "https://github.com/jamesmunns/cobs.rs", default-features = false }
byteorder = { version = "1.4.3", default-features = false }
anyhow = { version = "1.0", default-features = false }
